# Magick.NET

./: .gitignore
Source/Magick.NET/: Magick.NET.Standard.csproj
Source/Magick.NET.Native/: CMakeLists.txt
